# OGL_tutors

./: CMakeLists.txt  Framebuffer.cpp  Framebuffer.h  ShadersManager.cpp  ShadersManager.h  camera.cpp  camera.h  globalData.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h
GLAD/include/glad/: glad.h
GLAD/src/: glad.c
scenes/: scene.json
shaders/: fragment.glsl  fragment_lamp.glsl  fragment_model.glsl  fragment_quad_grayscale.glsl  fragment_quad_inverse.glsl  fragment_quad_kernel.glsl  fragment_skybox.glsl  fragment_solid.glsl  vertex.glsl  vertex_2D.glsl  vertex_quad.glsl  vertex_skybox.glsl  vertex_solid.glsl
shapes/: cone.nff  cube.nff  sphere.nff  textured_cube.nff
