cmake_minimum_required(VERSION 3.5.1)

project(GLFW_TMP)
aux_source_directory(${PROJECT_SOURCE_DIR}/imgui IMGUI_SOURCES)
aux_source_directory(${PROJECT_SOURCE_DIR} SOURCES)
add_executable(GLFW_TMP ${SOURCES} GLAD/src/glad.c ${IMGUI_SOURCES})

include_directories(${PROJECT_SOURCE_DIR}/glfw/include)
include_directories(${PROJECT_SOURCE_DIR}/GLAD/include)
include_directories(${PROJECT_SOURCE_DIR}/glm-0.9.9-a2)
include_directories(${PROJECT_SOURCE_DIR}/assimp/include)
include_directories(${PROJECT_SOURCE_DIR}/imgui)

FILE(COPY ${PROJECT_SOURCE_DIR}/shaders DESTINATION ${CMAKE_BINARY_DIR})
FILE(COPY ${PROJECT_SOURCE_DIR}/nanosuit DESTINATION ${CMAKE_BINARY_DIR})
FILE(COPY ${PROJECT_SOURCE_DIR}/shapes DESTINATION ${CMAKE_BINARY_DIR})
FILE(COPY ${PROJECT_SOURCE_DIR}/textures DESTINATION ${CMAKE_BINARY_DIR})

if(WIN32)
    message("WIN32!")
    find_library(GLFW_LIB_DEBUG glfw3 HINTS ${PROJECT_SOURCE_DIR}/glfw/build/src/Debug)
    find_library(ASSIMP_LIB_DEBUG assimp-vc142-mtd HINTS ${PROJECT_SOURCE_DIR}/assimp)
    find_library(GLFW_LIB_RELEASE glfw3 HINTS ${PROJECT_SOURCE_DIR}/glfw/build/src/Release)
    target_link_libraries(GLFW_TMP debug ${GLFW_LIB_DEBUG})
    target_link_libraries(GLFW_TMP optimized ${GLFW_LIB_RELEASE})
    target_link_libraries(GLFW_TMP opengl32 ${ASSIMP_LIB_DEBUG})
else()
    message("Unix!")

    SET(CMAKE_CXX_FLAGS "-std=c++17 -g")

    find_library(GLFW_LIB glfw3 HINTS ${PROJECT_SOURCE_DIR}/glfw/build/src)
    find_library(OGL_LIB OpenGL)
    find_library(CORE_VIDEO_LIB CoreVideo)
    find_library(IOKIT_LIB IOKit)
    find_library(COCOA_LIB Cocoa)
    find_library(CARBON_LIB Carbon)
    find_library(ASSIMP_LIB assimpd)
    target_link_libraries(GLFW_TMP ${GLFW_LIB} ${OGL_LIB} ${CORE_VIDEO_LIB} ${IOKIT_LIB} ${COCOA_LIB} ${CARBON_LIB} ${ASSIMP_LIB})# dl X11 Xrandr Xi Xxf86vm Xinerama Xcursor pthread)

endif()
